--- a/src/assets/scss/params/_params-colors.scss
+++ b/src/assets/scss/params/_params-colors.scss
@@ -26,17 +26,14 @@
 
     
     /* incident variables */
-    --color-background: var(--color-white);
-    --color-background-dark: var(--color-grey-100);
+    --color-background: var(--color-white)
+
     --color-text: var(--color-grey-100);
-    --color-text-light: var(--color-white);
     --color-text-grey-200: var(--color-grey-200);
     --color-text-grey-300: var(--color-grey-300);
     --color-text-grey-400: var(--color-grey-400);
     --color-text-grey-500: var(--color-grey-500);
-    --color-border: var(--color-grey-100);
-
+    
     --color-accent: var(--color-green-300);
 
-    --color-red: var(--color-red-300)
   }
